--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
-os: osx
-osx_image: xcode11.3
+os: linux
+# osx_image: xcode11.3
 language: ruby
 sudo: false
 cache: bundler
 rvm:
   - '2.7.0'
 addons:
-  homebrew:
+  apt:
     packages:
-    - macvim
+      - vim-gtk
 script:
-  - bundle exec rspec --format documentation
+  - xvfb-run bundle exec rspec --format documentation
